Refactor `getFirst` calls to `get(0)` for improved compliance and add OpenAPI dependency for API documentation.